# Alert-Axolotl-Evo

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  META_EVOLUTION.md  README.md  RESULTS.md  USAGE.md  alert_axolotl_evo.py  alert_axolotl_evo_legacy.py  config.yaml  demo.py  demo_champion.json  good_champion.json  pyproject.toml  test_economy.py  test_external_data.py  test_long_economy.py  test_run_champion.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
alert_axolotl_evo/: __init__.py  __main__.py  analytics.py  cli.py  compiler.py  config.py  data.py  evolution.py  fitness.py  main.py  meta_evolution.py  operators.py  pattern_discovery.py  persistence.py  primitives.py  promotion.py  self_improving.py  tree.py  visualization.py
alert_axolotl_evo/fitness/: __init__.py  alignment.py  baselines.py  evaluator.py
archive/: README.md  alert_axolotl_evo.py
docs/: DATA_LOADING_REVIEW.md  FITNESS_ALIGNMENT.md  FITNESS_ALIGNMENT_CHANGELOG.md  FITNESS_ALIGNMENT_VALIDATION.md  INDEX.md  architecture.md  design_contract.md  fitness-alignment.md  meta-evolution.md  results.md  usage.md
evolution_results/: checkpoint_run_0.json  checkpoint_test_run.json  run_0_champion.json
examples/: basic.py  basic_evolution.py  custom_data_loader.py  custom_primitives.py  fitness_alignment_demo.py  fun_examples.md  meta_evolution_example.py  output_sample.txt  real_data.py  self_improving_example.py
pm_demo_results/: checkpoint_pm_demo_run_0.json  checkpoint_pm_demo_run_1.json  checkpoint_pm_demo_run_2.json  pm_demo_run_0_champion.json  pm_demo_run_1_champion.json  pm_demo_run_2_champion.json
self_improving_results/: checkpoint_demo_run_0.json  checkpoint_demo_run_1.json  checkpoint_demo_run_2.json  checkpoint_demo_run_3.json  demo_run_0_champion.json  demo_run_1_champion.json  demo_run_2_champion.json  demo_run_3_champion.json
test_economy_results/: checkpoint_tick_0.json  checkpoint_tick_1.json  checkpoint_tick_2.json  checkpoint_tick_3.json  checkpoint_tick_4.json  checkpoint_tick_5.json  checkpoint_tick_6.json  checkpoint_tick_7.json  checkpoint_tick_8.json  checkpoint_tick_9.json  tick_0_champion.json  tick_1_champion.json  tick_2_champion.json  tick_3_champion.json  tick_4_champion.json  tick_5_champion.json  tick_6_champion.json  tick_7_champion.json  tick_8_champion.json  tick_9_champion.json
test_long_economy_results/: checkpoint_tick_0.json  checkpoint_tick_1.json  checkpoint_tick_10.json  checkpoint_tick_11.json  checkpoint_tick_12.json  checkpoint_tick_13.json  checkpoint_tick_14.json  checkpoint_tick_15.json  checkpoint_tick_16.json  checkpoint_tick_17.json  checkpoint_tick_18.json  checkpoint_tick_19.json  checkpoint_tick_2.json  checkpoint_tick_20.json  checkpoint_tick_21.json  checkpoint_tick_22.json  checkpoint_tick_23.json  checkpoint_tick_24.json  checkpoint_tick_3.json  checkpoint_tick_4.json  checkpoint_tick_5.json  checkpoint_tick_6.json  checkpoint_tick_7.json  checkpoint_tick_8.json  checkpoint_tick_9.json  tick_0_champion.json  tick_10_champion.json  tick_11_champion.json  tick_12_champion.json  tick_13_champion.json  tick_14_champion.json  tick_15_champion.json  tick_16_champion.json  tick_17_champion.json  tick_18_champion.json  tick_19_champion.json  tick_1_champion.json  tick_20_champion.json  tick_21_champion.json  tick_22_champion.json  (+10 more)
tests/: test_analytics.py  test_compiler.py  test_csv_auto_labeling.py  test_data.py  test_data_provenance.py  test_documentation.py  test_economy_integration.py  test_economy_invariants.py  test_evolution.py  test_external_data_integration.py  test_fitness.py  test_long_economy_integration.py  test_meta_evolution.py  test_operators.py  test_pattern_discovery.py  test_primitives.py  test_promotion.py  test_promotion_integration.py  test_self_improving.py  test_tree.py
