[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-axolotl-evo"
version = "1.0.0"
description = "Deterministic genetic programming for evolving interpretable alert rules"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Justin"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
alert-axolotl-evo = "alert_axolotl_evo.cli:main"

[tool.setuptools]
packages = ["alert_axolotl_evo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 110
target-version = "py38"
extend-exclude = ["examples", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

